# arguslog

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .prettierignore  ARGUSLOG_FOR_DUMMIES.en.md  ARGUSLOG_FOR_DUMMIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SELF_HOSTING.md  build.gradle.kts  local_hosting.md  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-public-mirror.yaml  pnpm-workspace.yaml  settings.gradle.kts  turbo.json
.claude/: settings.local.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.husky/: pre-push
apps/web/: Caddyfile  (+10 more)
buildSrc/: build.gradle.kts
cli/: README.md  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
docs/: auto-triage.md  p1-plan.md  p2-plan.md  p2.5-plan.md  p3-plan.md  p4-plan.md  p5-baseline.md  p5-plan.md  post-launch-backlog.md  sdks.md  slack-plan.md  strategy-vs-sentry.md
e2e/: .gitignore  README.md  eslint.config.mjs  package.json  playwright.config.ts  tsconfig.json
gradle/: libs.versions.toml
java-sdk/: README.md  build.gradle.kts  gradle.properties
pacts/: argus-sdk-browser-argus-ingest.json  arguslog-java-sdk-arguslog-ingest.json  arguslog-sdk-browser-arguslog-ingest.json  arguslog-sdk-node-arguslog-ingest.json
python-sdk/: .gitignore  README.md  pyproject.toml
python-sdk/examples/django-todo/: .gitignore  README.md  requirements.txt
python-sdk/examples/django-todo/todoproject/: settings.py  urls.py
python-sdk/examples/django-todo/todos/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
python-sdk/examples/django-todo/todos/migrations/: 0001_initial.py
python-sdk/examples/django-todo/todos/templates/todos/: base.html  demo.html  list.html
python-sdk/src/arguslog/: __init__.py  _client.py  _dsn.py  _options.py  _scrubber.py  _transport.py
python-sdk/src/arguslog/integrations/: __init__.py  excepthook.py  logging.py
python-sdk/tests/: conftest.py  test_client.py  test_dsn.py  test_dsn_fixtures.py  test_excepthook.py  test_init_env_var.py  test_logging.py  test_options.py  test_scrubber.py
scripts/: archive-billing-tables.sh  backup-postgres.sh  doctor.sh  dsn-test-fixtures.json  package.json  release-tag-public.sh  restore-postgres.sh  restore-smoke.sh  seed-demo.sh  smithery-refresh.sh  smithery-upload-icon.sh  sync-public-mirror.sh  verify-tag-version.mjs  (+1 more)
(+883 files in other folders)
